Updated workflow syntax

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main  
+  schedule:
+    - cron: "0 0 1 1 *"  # Runs at midnight UTC on Jan 1 each year
 
 jobs:
   build:
